# naive_rag

./: .gitignore  CMakeLists.txt  distances.txt  main.cpp  plaintext_distances.txt  plaintext_thresholds.txt  utils.cpp
include/: client.h  server.h  vector_utils.h
src/: client.cpp  openFHE_wrapper.cpp  server.cpp  vector_utils.cpp
